# GMTKGameJam2023

./: CMakeLists.txt  README.md
res/: levelbackground5.aseprite
src/: displayinfo.cpp  displayinfo.hpp  fontlibrary.cpp  fontlibrary.hpp  game.cpp  game.hpp  level.cpp  level.hpp  main.cpp  texturelibrary.cpp  texturelibrary.hpp
